--- a/css/style.css
+++ b/css/style.css
@@ -274,16 +274,16 @@ button {
 
 .navigation.navbar-dark .navbar-nav .nav-link:focus,
 .navigation.navbar-dark .navbar-nav .nav-link:hover {
-     color: #fe0000;
-     border-bottom: #fe0000 solid 3px;
+     color: #228B22;
+     border-bottom: #228B22 solid 3px;
 }
 
 .navigation.navbar-dark .navbar-nav .active>.nav-link,
 .navigation.navbar-dark .navbar-nav .nav-link.active,
 .navigation.navbar-dark .navbar-nav .nav-link.show,
 .navigation.navbar-dark .navbar-nav .show>.nav-link {
-     color: #fe0000;
-     border-bottom: #fe0000 solid 3px;
+     color: #228B22;
+     border-bottom: #228B22 solid 3px;
 }
 
 .navbar-expand-md .navbar-nav {
@@ -312,7 +312,7 @@ button {
 }
 
 .banner .carousel-indicators .active {
-     background-color: #fe0000;
+     background-color: #228B22;
 }
 
 .booking_ocline {
@@ -325,7 +325,7 @@ button {
 .book_room {
      background-color: #000000c7;
      padding: 30px 35px;
-     border-left: #ff0909 solid 5px;
+     border-left: #228B22 solid 5px;
 }
 
 .book_room h1 {
@@ -416,7 +416,7 @@ button {
 .titlepage h2::before {
      position: absolute;
      content: "";
-     background-color: #ff0909;
+     background-color: #228B22;
      width: 20px;
      height: 4px;
      transform: rotate(-36deg);
@@ -425,7 +425,7 @@ button {
 .titlepage h2::after {
      position: absolute;
      content: "";
-     background-color: #ff0909;
+     background-color: #228B22;
      width: 20px;
      height: 4px;
      transform: rotate(-36deg);
@@ -667,7 +667,7 @@ button {
 
 .blog .blog_box .blog_room span {
      font-size: 15px;
-     color: #ff0909;
+     color: #228B22;
      font-weight: bold;
      margin-bottom: 10px;
      display: block;
@@ -731,7 +731,7 @@ button {
 }
 
 .main_form .send_btn:hover {
-     background-color: #ff0909;
+     background-color: #228B22;
      transition: ease-in all 0.5s;
      color: #fff;
 }
@@ -769,7 +769,7 @@ button {
      text-align: left;
      color: #fff;
      margin-bottom: 15px;
-     border-bottom: #ff0909 solid 3px;
+     border-bottom: #228B22 solid 3px;
      padding-bottom: 3px;
      display: table;
 }
@@ -797,7 +797,7 @@ ul.link_menu li {
 }
 
 ul.link_menu li.active a {
-     color: #ff0909;
+     color: #228B22;
 }
 
 ul.link_menu li a {
@@ -809,7 +809,7 @@ ul.link_menu li a {
 }
 
 ul.link_menu li a:hover {
-     color: #ff0909;
+     color: #228B22;
 }
 
 .bottom_form {
@@ -847,7 +847,7 @@ ul.link_menu li a:hover {
      font-size: 17px;
      transition: ease-in all 0.5s;
      background-color: #fff;
-     color: #ff0909;
+     color: #228B22;
      padding: 8px 0px;
      max-width: 147px;
      width: 100%;
@@ -857,7 +857,7 @@ ul.link_menu li a:hover {
 }
 
 .sub_btn:hover {
-     background-color: #ff0909;
+     background-color: #228B22;
      transition: ease-in all 0.5s;
      color: #fff;
 }
@@ -884,14 +884,14 @@ ul.social_icon li a {
 }
 
 ul.social_icon li a:hover {
-     color: #ff0909;
+     color: #228B22;
 }
 
 .copyright {
      margin-top: 60px;
      padding-bottom: 20px;
      background-color: #fff;
-     border: #ff0909 solid 3px;
+     border: #228B22 solid 3px;
      border-right: inherit;
      border-left: inherit;
 }
@@ -911,7 +911,7 @@ ul.social_icon li a:hover {
 }
 
 .copyright a:hover {
-     color: #ff0909;
+     color: #228B22;
 }
 
 
@@ -984,7 +984,7 @@ line-height: 35px;
    }
    
    .logor .highlight {
-     color: red;
+     color: #228B22;
    }
    
    .logor:hover {
@@ -998,6 +998,6 @@ line-height: 35px;
  }
  
  .carousel-indicators .active {
-     background-color: #ff5722; /* Couleur du point actif */
+     background-color: #228B22; /* Couleur du point actif */
  }
 
