--- a/css/style.css
+++ b/css/style.css
@@ -1001,3 +1001,22 @@ line-height: 35px;
      background-color: #228B22; /* Couleur du point actif */
  }
 
+ #backToTopBtn {
+     display: none; /* Caché par défaut */
+     position: fixed; /* Positionné en bas à droite de la page */
+     bottom: 20px;
+     right: 30px;
+     z-index: 99; /* Par-dessus tout le contenu */
+     font-size: 18px;
+     background-color: #555; /* Couleur de fond */
+     color: white; /* Couleur du texte */
+     border: none; /* Sans bordure */
+     border-radius: 50%; /* Bouton circulaire */
+     padding: 15px;
+     cursor: pointer; /* Pointeur de souris */
+ }
+ 
+ #backToTopBtn:hover {
+     background-color: #333; /* Couleur au survol */
+ }
+ 
