--- a/css/style.css
+++ b/css/style.css
@@ -269,13 +269,11 @@ button {
      line-height: 20px;
      font-weight: 500;
      text-transform: uppercase;
-     border-bottom: #fff solid 3px;
 }
 
 .navigation.navbar-dark .navbar-nav .nav-link:focus,
 .navigation.navbar-dark .navbar-nav .nav-link:hover {
      color: #228B22;
-     border-bottom: #228B22 solid 3px;
 }
 
 .navigation.navbar-dark .navbar-nav .active>.nav-link,
@@ -283,7 +281,6 @@ button {
 .navigation.navbar-dark .navbar-nav .nav-link.show,
 .navigation.navbar-dark .navbar-nav .show>.nav-link {
      color: #228B22;
-     border-bottom: #228B22 solid 3px;
 }
 
 .navbar-expand-md .navbar-nav {
@@ -500,6 +497,12 @@ button {
 }
 
 .about_img figure img:hover {
+     transform: scale(1.2);
+}
+figure img {
+     transition: all .5s;
+}
+figure img:hover {
      transform: scale(1.2);
 }
 
@@ -1002,23 +1005,28 @@ line-height: 35px;
  }
 
  #backToTopBtn {
-     display: none; /* Caché par défaut */
-     position: fixed; /* Positionné en bas à droite de la page */
-     bottom: 20px;
-     right: 30px;
-     z-index: 99; /* Par-dessus tout le contenu */
-     font-size: 18px;
-     background-color: #555; /* Couleur de fond */
-     color: white; /* Couleur du texte */
-     border: none; /* Sans bordure */
-     border-radius: 50%; /* Bouton circulaire */
-     padding: 15px;
-     cursor: pointer; /* Pointeur de souris */
+     background-color: #228B22; /* Vert forêt pour le fond du bouton */
+     color: #ffffff; /* Texte blanc pour contraste */
+     border: 2px solid #228B22; /* Bordure vert forêt */
+     border-radius: 10px; /* Coins arrondis */
+     padding: 10px 20px; /* Espacement confortable */
+     font-size: 16px; /* Taille du texte */
+     font-weight: bold; /* Texte en gras pour plus de visibilité */
+     cursor: pointer; /* Curseur de clic */
+     transition: all 0.3s ease; /* Transition douce pour l'effet de survol */
+ }
+ #backToTopBtn i {
+     font-size: 18px; /* Taille de l'icône */
+ }
+ #backToTopBtn:hover {
+     background-color: #ffffff; /* Changer la couleur de fond en blanc au survol */
+     color: #228B22; /* Texte vert forêt pour correspondre à la bordure */
+     border: 2px solid #228B22; /* Garder la bordure vert forêt */
+     transform: scale(1.1); /* Agrandir légèrement au survol */
+     box-shadow: 0 0 10px rgba(34, 139, 34, 0.5); /* Ombre avec une teinte vert forêt */
  }
  
- #backToTopBtn:hover {
-     background-color: #333; /* Couleur au survol */
- }
+ 
  .no-margin {
      margin-top: 0 !important; /* Supprime le margin-top */
   }
