udapte for mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -608,7 +608,7 @@ figure img:hover {
 /** blog section **/
 
 .blog {
-     background: url(../images/fond.jpg);
+     background: url(../images/waterfall.jpg);
      background-repeat: no-repeat;
      background-size: 100% 100%;
      padding: 60px 0 30px 0;
